# timelapse

./: .gitignore  .travis.yml  1st question-best.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  Makefile  NaiveBayes.py  README.md  encoder.py  png  pyproject.toml  recorder.py  requirements-dev.txt  requirements.txt  screenshot.py  setup.py  test2.py  test_timelapse.py  timelapse.py  timelapse_1.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pythonapp.yml
__tests__/: test_timelapse.py
src/: encoder.py  timelapse.py
test/: TestRecorder.py
tests/: .test_recorder.py.swp  test_recorder.py
timelapse/: __init__.py  __main__.py  encoder.py  notify.py  recorder.py
timelapse/resources/: icon.icns
