[tool.poetry]
name = "timelapse"
version = "1.0"
description = "Record a timelapse video of your desktop. Native macOS screen recording app."
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mre/timelapse"
keywords = ["screen-recorder", "timelapse", "macos"]

[tool.poetry.dependencies]
python = "^3.6"
pyobjc = "6.1"

[tool.poetry.dev-dependencies]
pytest = "3.9.3"
py2app = "^0.20"
pylint = "^2.4.4"

[tool.poetry.scripts]
run = "timelapse.__main__:main"